--- a/index.html
+++ b/index.html
@@ -121,21 +121,30 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="text-center profile-card" style="margin:15px;background-color:#ffffff;">
-                    <div class="profile-card-img" style="background-image:url(&quot;iceland.jpg&quot;);height:150px;background-size:cover;"></div>
-                    <div><img class="rounded-circle" style="margin-top:-70px;" src="assets/img/kevin(1).jpg" height="150px">
-                        <h3>Maulana Kevin Pradana</h3>
-                        <p style="padding:20px;padding-bottom:0;padding-top:5px;">CEO of Lavinza</p>
+                        <div class="profile-card-img" style="background-image:url(&quot;iceland.jpg&quot;);height:150px;background-size:cover;"></div>
+                        <div><img class="rounded-circle" style="margin-top:-70px;" src="assets/img/wildan.jpg" height="150px">
+                            <h3>Muhammad Wildan</h3>
+                            <p style="padding:20px;padding-bottom:0;padding-top:5px;">CTO of Lavinza</p>
+                        </div>
                     </div>
-                </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="text-center profile-card" style="margin:15px;background-color:#ffffff;">
-                    <div class="profile-card-img" style="background-image:url(&quot;iceland.jpg&quot;);height:150px;background-size:cover;"></div>
-                    <div><img class="rounded-circle" style="margin-top:-70px;" src="assets/img/wildan.jpg" height="150px">
-                        <h3>Muhammad Wildan</h3>
-                        <p style="padding:20px;padding-bottom:0;padding-top:5px;">CTO of Lavinza</p>
+                        <div class="profile-card-img" style="background-image:url(&quot;iceland.jpg&quot;);height:150px;background-size:cover;"></div>
+                        <div><img class="rounded-circle" style="margin-top:-70px;" src="assets/img/kevin(1).jpg" height="150px">
+                            <h3>Maulana Kevin Pradana</h3>
+                            <p style="padding:20px;padding-bottom:0;padding-top:5px;">CEO of Lavinza</p>
+                        </div>
                     </div>
                 </div>
+                <div class="col-lg-4">
+                    <div class="text-center profile-card" style="margin:15px;background-color:#ffffff;">
+                        <div class="profile-card-img" style="background-image:url(&quot;iceland.jpg&quot;);height:150px;background-size:cover;"></div>
+                        <div><img class="rounded-circle" style="margin-top:-70px;" src="assets/img/angela.jpg" height="150px">
+                            <h3>Angela Dewanti</h3>
+                            <p style="padding:20px;padding-bottom:0;padding-top:5px;">CFO of Lavinza</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
