--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <h2><span>Hubungi Kami</span><i class="far fa-comments"></i></h2>
             <ul class="list-inline list-social">
                 <li class="list-inline-item social-twitter"><a href="https://api.whatsapp.com/send?phone=6282331571857&amp;text=Saya%20tertarik%20dengan%20jasa%20pembuatan%20website%20yang%20anda%20tawarkan" style="background-color: rgb(29,242,63);"><i class="fa fa-whatsapp"></i></a></li>
-                <li class="list-inline-item social-facebook"><a href="https://maulanakevinp@gmail.com" style="background-color: rgb(29,204,242);"><i class="fas fa-mail-bulk"></i></a></li>
+                <li class="list-inline-item social-facebook"><a href="https://admin@lavinza.me" style="background-color: rgb(29,204,242);"><i class="fas fa-mail-bulk"></i></a></li>
                 <li class="list-inline-item social-google-plus"><a href="tel:0823-3157-1857"><i
                             class="fas fa-phone"></i></a></li>
             </ul>
