--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-lg-8 my-auto">
                     <div class="container-fluid">
-                        <div class="row">
+                        <div class="row justify-content-center">
                             <div class="col-lg-6">
                                 <div class="feature-item">
                                     <i class="icon-globe text-primary"></i>
@@ -98,14 +98,6 @@
                                     <i class="icon-screen-desktop text-primary"></i>
                                     <h3>Aplikasi Desktop</h3>
                                     <p class="text-muted">Pembuatan dan pengembangan sistem informasi berbasis aplikasi Desktop
-                                        <br></p>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="feature-item">
-                                    <i class="icon-user-following text-primary"></i>
-                                    <h3>IT Support</h3>
-                                    <p class="text-muted">Perancangan dan pemeliharaan infrastruktur komputer dan jaringan
                                         <br></p>
                                 </div>
                             </div>
