--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <h2>Portofolio</h2>
                 <hr>
             </div>
-            <div class="row">
+            <div class="row justify-content-center">
                 <div class="col-lg-6 mb-3">
                     <div class="card shadow h-100">
                         <div class="card-header">
@@ -207,6 +207,20 @@
                             <ul>
                                 <li>
                                     <a target="_blank" href="https://absensi.lavinza.me">Absensi</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 mb-3">
+                    <div class="card shadow h-100">
+                        <div class="card-header">
+                            <h5>Website Bidang Edukasi</h5>
+                        </div>
+                        <div class="card-body">
+                            <ul>
+                                <li>
+                                    <a target="_blank" href="https://sdunej.id">Sekolah Desa UNEJ</a>
                                 </li>
                             </ul>
                         </div>
