--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="col-lg-6 mb-3">
                     <div class="card shadow h-100">
                         <div class="card-header">
-                            <h5>Website E-Commerce</h5>
+                            <h5 class="font-weight-bold">Website E-Commerce</h5>
                         </div>
                         <div class="card-body">
                             <ul>
@@ -142,7 +142,7 @@
                 <div class="col-lg-6 mb-3">
                     <div class="card shadow h-100">
                         <div class="card-header">
-                            <h5>Website UKM</h5>
+                            <h5 class="font-weight-bold">Website UKM</h5>
                         </div>
                         <div class="card-body">
                             <ul>
@@ -159,7 +159,7 @@
                 <div class="col-lg-6 mb-3">
                     <div class="card shadow h-100">
                         <div class="card-header">
-                            <h5>Website Sistem Informasi Desa</h5>
+                            <h5 class="font-weight-bold">Website Sistem Informasi Desa</h5>
                         </div>
                         <div class="card-body">
                             <ul>
@@ -173,7 +173,7 @@
                 <div class="col-lg-6 mb-3">
                     <div class="card shadow h-100">
                         <div class="card-header">
-                            <h5>Website Sistem Informasi Geografis</h5>
+                            <h5 class="font-weight-bold">Website Sistem Informasi Geografis</h5>
                         </div>
                         <div class="card-body">
                             <ul>
@@ -187,7 +187,7 @@
                 <div class="col-lg-6 mb-3">
                     <div class="card shadow h-100">
                         <div class="card-header">
-                            <h5>Website Sistem Informasi Rekam Medis</h5>
+                            <h5 class="font-weight-bold">Website Sistem Informasi Rekam Medis</h5>
                         </div>
                         <div class="card-body">
                             <ul>
@@ -201,7 +201,7 @@
                 <div class="col-lg-6 mb-3">
                     <div class="card shadow h-100">
                         <div class="card-header">
-                            <h5>Website Sistem Absensi</h5>
+                            <h5 class="font-weight-bold">Website Sistem Absensi</h5>
                         </div>
                         <div class="card-body">
                             <ul>
@@ -215,7 +215,7 @@
                 <div class="col-lg-6 mb-3">
                     <div class="card shadow h-100">
                         <div class="card-header">
-                            <h5>Website Bidang Edukasi</h5>
+                            <h5 class="font-weight-bold">Website Bidang Edukasi</h5>
                         </div>
                         <div class="card-body">
                             <ul>
