--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6 mb-3">
                     <div class="card shadow h-100">
-                        <div class="card-header">
-                            <h5 class="font-weight-bold">Website E-Commerce</h5>
+                        <div class="card-header font-weight-bold h5">
+                            Website E-Commerce
                         </div>
                         <div class="card-body">
                             <ul>
@@ -141,8 +141,8 @@
                 </div>
                 <div class="col-lg-6 mb-3">
                     <div class="card shadow h-100">
-                        <div class="card-header">
-                            <h5 class="font-weight-bold">Website UKM</h5>
+                        <div class="card-header font-weight-bold h5">
+                            Website UKM
                         </div>
                         <div class="card-body">
                             <ul>
@@ -158,8 +158,8 @@
                 </div>
                 <div class="col-lg-6 mb-3">
                     <div class="card shadow h-100">
-                        <div class="card-header">
-                            <h5 class="font-weight-bold">Website Sistem Informasi Desa</h5>
+                        <div class="card-header font-weight-bold h5">
+                            Website Sistem Informasi Desa
                         </div>
                         <div class="card-body">
                             <ul>
@@ -172,8 +172,8 @@
                 </div>
                 <div class="col-lg-6 mb-3">
                     <div class="card shadow h-100">
-                        <div class="card-header">
-                            <h5 class="font-weight-bold">Website Sistem Informasi Geografis</h5>
+                        <div class="card-header font-weight-bold h5">
+                            Website Sistem Informasi Geografis
                         </div>
                         <div class="card-body">
                             <ul>
@@ -186,8 +186,8 @@
                 </div>
                 <div class="col-lg-6 mb-3">
                     <div class="card shadow h-100">
-                        <div class="card-header">
-                            <h5 class="font-weight-bold">Website Sistem Informasi Rekam Medis</h5>
+                        <div class="card-header font-weight-bold h5">
+                            Website Sistem Informasi Rekam Medis
                         </div>
                         <div class="card-body">
                             <ul>
@@ -200,8 +200,8 @@
                 </div>
                 <div class="col-lg-6 mb-3">
                     <div class="card shadow h-100">
-                        <div class="card-header">
-                            <h5 class="font-weight-bold">Website Sistem Absensi</h5>
+                        <div class="card-header font-weight-bold h5">
+                            Website Sistem Absensi
                         </div>
                         <div class="card-body">
                             <ul>
@@ -214,8 +214,8 @@
                 </div>
                 <div class="col-lg-6 mb-3">
                     <div class="card shadow h-100">
-                        <div class="card-header">
-                            <h5 class="font-weight-bold">Website Bidang Edukasi</h5>
+                        <div class="card-header font-weight-bold h5">
+                            Website Bidang Edukasi
                         </div>
                         <div class="card-body">
                             <ul>
