--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Pesan website sekarang - Lavinza</title>
+    <title>Pesan website sekarang - PESAN-WEB</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900">
@@ -24,7 +24,7 @@
 
 <body id="page-top">
     <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
-        <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top">LAVINZA</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler float-right" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i
+        <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top">PESAN-WEB</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler float-right" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i
                     class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
@@ -242,7 +242,7 @@
 
     <footer>
         <div class="container">
-            <p>© Lavinza 2019. All Rights Reserved.</p>
+            <p>© PESAN-WEB 2019-2020. All Rights Reserved.</p>
             <ul class="list-inline">
                 <li class="list-inline-item"></li>
                 <li class="list-inline-item"></li>
