--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="row">
                 <div class="col-md-8 mx-auto">
                     <h2 class="section-heading">Tentang Kami</h2>
-                    <p><strong>Lavinza</strong>&nbsp;adalah Perusahaan Software Development di Jember - Indonesia, yang mengembangkan Sistem Informasi berbasis Web dan Desktop. Layanan kami meliputi Perancangan dan Pengembangan Software Sistem Informasi
+                    <p><strong>PESAN-WEB</strong>&nbsp;adalah Perusahaan Software Development di Jember - Indonesia, yang mengembangkan Sistem Informasi berbasis Web dan Desktop. Layanan kami meliputi Perancangan dan Pengembangan Software Sistem Informasi
                         berbasis Web (Web based Information Systems) dan Perancangan dan Pengembangan Software Sistem Informasi berbasis Aplikasi Desktop (Desktop Apps).<br><br></p>
                     <div class="badges">
                         <a class="badge-link" href="#"></a>
