--- a/index.html
+++ b/index.html
@@ -226,6 +226,20 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-6 mb-3">
+                    <div class="card shadow h-100">
+                        <div class="card-header font-weight-bold h5">
+                            Website Sistem Informasi Perijinan
+                        </div>
+                        <div class="card-body">
+                            <ul>
+                                <li>
+                                    <a target="_blank" href="https://pgn-indonesia.com">PT. Perusahaan Gas Negara</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
