--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         <div class="card-body">
                             <ul>
                                 <li>
-                                    <a target="_blank" href="https://simapeda.lavinza.me">Simapeda</a>
+                                    <a target="_blank" href="https://simapeda.pesan-web.com">SIMAPEDA</a>
                                 </li>
                             </ul>
                         </div>
