--- a/index.html
+++ b/index.html
@@ -93,14 +93,6 @@
                                     <p class="text-muted">Pembuatan dan pengembangan aplikasi sistem informasi<br></p>
                                 </div>
                             </div>
-                            <div class="col-lg-6">
-                                <div class="feature-item">
-                                    <i class="icon-screen-desktop text-primary"></i>
-                                    <h3>Aplikasi Desktop</h3>
-                                    <p class="text-muted">Pembuatan dan pengembangan sistem informasi berbasis aplikasi Desktop
-                                        <br></p>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -150,7 +142,7 @@
                                     <a target="_blank" href="https://primapers.com">Primapers</a>
                                 </li>
                                 <li>
-                                    <a target="_blank" href="https://etalase.lavinza.me">Etalase</a>
+                                    <a target="_blank" href="https://etalase.pesan-web.com">Etalase</a>
                                 </li>
                             </ul>
                         </div>
@@ -178,7 +170,7 @@
                         <div class="card-body">
                             <ul>
                                 <li>
-                                    <a target="_blank" href="https://spot.lavinza.me">SPOT</a>
+                                    <a target="_blank" href="https://spot.pesan-web.com">SPOT</a>
                                 </li>
                             </ul>
                         </div>
@@ -192,7 +184,7 @@
                         <div class="card-body">
                             <ul>
                                 <li>
-                                    <a target="_blank" href="https://medis.lavinza.me">Medis</a>
+                                    <a target="_blank" href="https://medis.pesan-web.com">Medis</a>
                                 </li>
                             </ul>
                         </div>
@@ -206,7 +198,7 @@
                         <div class="card-body">
                             <ul>
                                 <li>
-                                    <a target="_blank" href="https://absensi.lavinza.me">Absensi</a>
+                                    <a target="_blank" href="https://absensi.pesan-web.com">Absensi</a>
                                 </li>
                             </ul>
                         </div>
@@ -248,7 +240,7 @@
             <h2><span>Hubungi Kami</span><i class="far fa-comments"></i></h2>
             <ul class="list-inline list-social">
                 <li class="list-inline-item social-twitter"><a href="https://api.whatsapp.com/send?phone=6282331571857&amp;text=Saya%20tertarik%20dengan%20jasa%20pembuatan%20website%20yang%20anda%20tawarkan" style="background-color: rgb(29,242,63);"><i class="fa fa-whatsapp"></i></a></li>
-                <li class="list-inline-item social-facebook"><a href="mailto:admin@lavinza.me" style="background-color: rgb(29,204,242);"><i class="fas fa-mail-bulk"></i></a></li>
+                <li class="list-inline-item social-facebook"><a href="mailto:admin@pesan-web.com" style="background-color: rgb(29,204,242);"><i class="fas fa-mail-bulk"></i></a></li>
                 <li class="list-inline-item social-google-plus"><a href="tel:0823-3157-1857"><i class="fas fa-phone"></i></a></li>
             </ul>
         </div>
