--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="col-md-8 mx-auto">
                     <h2 class="section-heading">Tentang Kami</h2>
                     <p><strong>PESAN-WEB</strong>&nbsp;adalah Perusahaan Software Development di Jember - Indonesia, yang mengembangkan Sistem Informasi berbasis Web dan Desktop. Layanan kami meliputi Perancangan dan Pengembangan Software Sistem Informasi
-                        berbasis Web (Web based Information Systems) dan Perancangan dan Pengembangan Software Sistem Informasi berbasis Aplikasi Desktop (Desktop Apps).<br><br></p>
+                        berbasis Web (Web based Information Systems).<br><br></p>
                     <div class="badges">
                         <a class="badge-link" href="#"></a>
                         <a class="badge-link" href="#"></a>
