--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <script data-ad-client="ca-pub-5912952470575648" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    
-    
+    <meta name="description" content="PESAN-WEB adalah Perusahaan Software Development di Jember - Indonesia, yang mengembangkan Sistem Informasi berbasis Website">
+    <meta name="author" content="Pesan Web">
+    <meta name="keywords" content="pesan web,pesan website,pesan-web,website murah, web murah,jember">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Pesan website sekarang - PESAN-WEB</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
