--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
                 <div class="col-lg-6 mb-3">
                     <div class="card shadow h-100">
                         <div class="card-header font-weight-bold h5">
-                            Website Sistem Informasi Desa
+                            Website Sistem Informasi Manajemen Pelayanan Desa (SIMAPEDA)
                         </div>
                         <div class="card-body">
                             <ul>
                                 <li>
-                                    <a target="_blank" href="https://simapeda.pesan-web.com">SIMAPEDA</a>
+                                    <a target="_blank" href="https://arjasa.web.id">DESA ARJASA</a>
                                 </li>
                             </ul>
                         </div>
