--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
                         <div class="card-body">
                             <ul>
                                 <li>
+                                    <a target="_blank" href="https://simapeda.pesan-web.com">SIMAPEDA</a>
+                                </li>
+                                <li>
                                     <a target="_blank" href="https://arjasa.web.id">DESA ARJASA</a>
                                 </li>
                             </ul>
