--- a/index.html
+++ b/index.html
@@ -123,10 +123,13 @@
                         <div class="card-body">
                             <ul>
                                 <li>
-                                    <a target="_blank" href="https://xylodecoration.com">Xylodecoration</a>
+                                    <a>Xylodecoration</a>
                                 </li>
                                 <li>
                                     <a target="_blank" href="https://bosgerobak.com">Bos Gerobak</a>
+                                </li>
+                                <li>
+                                    <a target="_blank" href="https://blackorangecctv.com">Black Orange CCTV</a>
                                 </li>
                             </ul>
                         </div>
