--- a/index.html
+++ b/index.html
@@ -115,127 +115,146 @@
                 <hr>
             </div>
             <div class="row justify-content-center">
-                <div class="col-lg-6 mb-3">
+                <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card shadow h-100">
-                        <div class="card-header font-weight-bold h5">
-                            Website E-Commerce
+                        <div class="card-img-top">
+                            <img class="mw-100" src="/assets/img/blackorangecctv.png" alt="Black Orange CCTV">
                         </div>
                         <div class="card-body">
-                            <ul>
-                                <li>
-                                    <a>Xylodecoration</a>
-                                </li>
-                                <li>
-                                    <a target="_blank" href="https://bosgerobak.com">Bos Gerobak</a>
-                                </li>
-                                <li>
-                                    <a target="_blank" href="https://blackorangecctv.com">Black Orange CCTV</a>
-                                </li>
-                            </ul>
+                            <div class="text-center">
+                                <a class="font-weight-bold h5" target="_blank" href="https://blackorangecctv.com">Black Orange CCTV</a>
+                            </div>
+                            <p style="font-size: small; text-align: justify;" class="mb-0 mt-3">Website e-commerce atau toko online yang menggunakan API WhatsApp untuk pemesanan produk milik PT. HITAM ORANYE INDONESIA</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 mb-3">
+                <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card shadow h-100">
-                        <div class="card-header font-weight-bold h5">
-                            Website UKM
+                        <div class="card-img-top">
+                            <img class="mw-100" src="/assets/img/arjasa.png" alt="Desa Arjasa">
                         </div>
                         <div class="card-body">
-                            <ul>
-                                <li>
-                                    <a target="_blank" href="https://primapers.com">Primapers</a>
-                                </li>
-                                <li>
-                                    <a target="_blank" href="https://etalase.pesan-web.com">Etalase</a>
-                                </li>
-                            </ul>
+                            <div class="text-center">
+                                <a class="font-weight-bold h5" target="_blank" href="https://arjasa.web.id">Desa Arjasa</a>
+                            </div>
+                            <p style="font-size: small; text-align: justify;" class="mb-0 mt-3">Website sistem informasi manajemen pelayanan desa di Arjasa Kecamatan Arjasa Kabupaten Jember</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 mb-3">
+                <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card shadow h-100">
-                        <div class="card-header font-weight-bold h5">
-                            Website Sistem Informasi Manajemen Pelayanan Desa (SIMAPEDA)
+                        <div class="card-img-top">
+                            <img class="mw-100" src="/assets/img/pgn.png" alt="PGN-INDONESIA">
                         </div>
                         <div class="card-body">
-                            <ul>
-                                <li>
-                                    <a target="_blank" href="https://simapeda.pesan-web.com">SIMAPEDA</a>
-                                </li>
-                                <li>
-                                    <a target="_blank" href="https://arjasa.web.id">DESA ARJASA</a>
-                                </li>
-                            </ul>
+                            <div class="text-center">
+                                <a class="font-weight-bold h5" target="_blank" href="https://pgn-indonesia.com">PGN-INDONESIA</a>
+                            </div>
+                            <p style="font-size: small; text-align: justify;" class="mb-0 mt-3">Website sistem informasi manajemen perijinan kerja pada Perusahaan GAS NEGARA INDONESIA Tbk</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 mb-3">
+                <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card shadow h-100">
-                        <div class="card-header font-weight-bold h5">
-                            Website Sistem Informasi Geografis
+                        <div class="card-img-top">
+                            <img class="mw-100" src="/assets/img/bwijuaratrip.png" alt="BanyuwangiJuaraTrip">
                         </div>
                         <div class="card-body">
-                            <ul>
-                                <li>
-                                    <a target="_blank" href="https://spot.pesan-web.com">SPOT</a>
-                                </li>
-                            </ul>
+                            <div class="text-center">
+                                <a class="font-weight-bold h5" target="_blank" href="https://bwijuaratrip.pesan-web.com">BanyuwangiJuaraTrip</a>
+                            </div>
+                            <p style="font-size: small; text-align: justify;" class="mb-0 mt-3">Website sistem informasi penjualan tiket wisata yang terintegrasi dengan payment gateway menggunakan API Ipaymu.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 mb-3">
+                <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card shadow h-100">
-                        <div class="card-header font-weight-bold h5">
-                            Website Sistem Informasi Rekam Medis
+                        <div class="card-img-top">
+                            <img class="mw-100" src="/assets/img/sdunej.png" alt="SDUNEJ">
                         </div>
                         <div class="card-body">
-                            <ul>
-                                <li>
-                                    <a target="_blank" href="https://medis.pesan-web.com">Medis</a>
-                                </li>
-                            </ul>
+                            <div class="text-center">
+                                <a class="font-weight-bold h5" target="_blank" href="https://sdunej.id">SDUNEJ</a>
+                            </div>
+                            <p style="font-size: small; text-align: justify;" class="mb-0 mt-3">Website sistem informasi edukasi yang dicanangkan oleh LP2M UNEJ untuk mahasiswa KKN Back to Village.</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 mb-3">
+                <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card shadow h-100">
-                        <div class="card-header font-weight-bold h5">
-                            Website Sistem Absensi
+                        <div class="card-img-top">
+                            <img class="mw-100" src="/assets/img/etalase.png" alt="UKMK ETALASE">
                         </div>
                         <div class="card-body">
-                            <ul>
-                                <li>
-                                    <a target="_blank" href="https://absensi.pesan-web.com">Absensi</a>
-                                </li>
-                            </ul>
+                            <div class="text-center">
+                                <a class="font-weight-bold h5" target="_blank" href="https://etalase.pesan-web.com">UKMK ETALASE</a>
+                            </div>
+                            <p style="font-size: small; text-align: justify;" class="mb-0 mt-3">Website profile UKMK ETALASE</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 mb-3">
+                <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card shadow h-100">
-                        <div class="card-header font-weight-bold h5">
-                            Website Bidang Edukasi
+                        <div class="card-img-top">
+                            <img class="mw-100" src="/assets/img/absensi.png" alt="ABSENSI">
                         </div>
                         <div class="card-body">
-                            <ul>
-                                <li>
-                                    <a target="_blank" href="https://sdunej.id">Sekolah Desa UNEJ</a>
-                                </li>
-                            </ul>
+                            <div class="text-center">
+                                <a class="font-weight-bold h5" target="_blank" href="https://absensi.pesan-web.com">ABSENSI</a>
+                            </div>
+                            <p style="font-size: small; text-align: justify;" class="mb-0 mt-3">Website sistem informasi manajemn absensi menggunakan ip wifi kantor untuk melakukan presensi pada perusahaan PT.Grhayasa Nusacitra Estima</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 mb-3">
+                <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card shadow h-100">
-                        <div class="card-header font-weight-bold h5">
-                            Website Sistem Informasi Perijinan
+                        <div class="card-img-top">
+                            <img class="mw-100" src="/assets/img/bosgerobak.png" alt="bosgerobak">
                         </div>
                         <div class="card-body">
-                            <ul>
-                                <li>
-                                    <a target="_blank" href="https://pgn-indonesia.com">PT. Perusahaan Gas Negara</a>
-                                </li>
-                            </ul>
+                            <div class="text-center">
+                                <a class="font-weight-bold h5" target="_blank" href="https://bosgerobak.com">BOSGEROBAK</a>
+                            </div>
+                            <p style="font-size: small; text-align: justify;" class="mb-0 mt-3">Website e-commerce atau toko online yang menggunakan API WhatsApp untuk pemesanan produk</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-5">
+                    <div class="card shadow h-100">
+                        <div class="card-img-top">
+                            <img class="mw-100" src="/assets/img/spot.png" alt="spot">
+                        </div>
+                        <div class="card-body">
+                            <div class="text-center">
+                                <a class="font-weight-bold h5" target="_blank" href="https://spot.pesan-web.com">SPOT</a>
+                            </div>
+                            <p style="font-size: small; text-align: justify;" class="mb-0 mt-3">Website sistem informasi geografis menggunakan library leaflet js</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-5">
+                    <div class="card shadow h-100">
+                        <div class="card-img-top">
+                            <img class="mw-100" src="/assets/img/primapers.png" alt="primapers">
+                        </div>
+                        <div class="card-body">
+                            <div class="text-center">
+                                <a class="font-weight-bold h5" target="_blank" href="https://primapers.com">PRIMAPERS</a>
+                            </div>
+                            <p style="font-size: small; text-align: justify;" class="mb-0 mt-3">Website profile UKM Primapers UNEJ dan dengan menggunakan sistem blog</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-5">
+                    <div class="card shadow h-100">
+                        <div class="card-img-top">
+                            <img class="mw-100" src="/assets/img/xylodecoration.png" alt="xylodecoration">
+                        </div>
+                        <div class="card-body">
+                            <div class="text-center">
+                                <a class="font-weight-bold h5">XYLODECORATION</a>
+                            </div>
+                            <p style="font-size: small; text-align: justify;" class="mb-0 mt-3">Website e-commerce atau toko online yang menggunakan API WhatsApp untuk pemesanan produk</p>
                         </div>
                     </div>
                 </div>
