update link img

--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card shadow h-100">
                         <div class="card-img-top">
-                            <img class="mw-100" src="/assets/img/blackorangecctv.png" alt="Black Orange CCTV">
+                            <a class="font-weight-bold h5" target="_blank" href="https://blackorangecctv.com">
+                                <img class="mw-100" src="/assets/img/blackorangecctv.png" alt="Black Orange CCTV">
+                            </a>
                         </div>
                         <div class="card-body">
                             <div class="text-center">
@@ -131,7 +133,9 @@
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card shadow h-100">
                         <div class="card-img-top">
-                            <img class="mw-100" src="/assets/img/arjasa.png" alt="Desa Arjasa">
+                            <a class="font-weight-bold h5" target="_blank" href="https://arjasa.web.id">
+                                <img class="mw-100" src="/assets/img/arjasa.png" alt="Desa Arjasa">
+                            </a>
                         </div>
                         <div class="card-body">
                             <div class="text-center">
@@ -144,7 +148,9 @@
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card shadow h-100">
                         <div class="card-img-top">
-                            <img class="mw-100" src="/assets/img/pgn.png" alt="PGN-INDONESIA">
+                            <a class="font-weight-bold h5" target="_blank" href="https://pgn-indonesia.com">
+                                <img class="mw-100" src="/assets/img/pgn.png" alt="PGN-INDONESIA">
+                            </a>
                         </div>
                         <div class="card-body">
                             <div class="text-center">
@@ -157,7 +163,9 @@
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card shadow h-100">
                         <div class="card-img-top">
-                            <img class="mw-100" src="/assets/img/bwijuaratrip.png" alt="BanyuwangiJuaraTrip">
+                            <a class="font-weight-bold h5" target="_blank" href="https://bwijuaratrip.pesan-web.com">
+                                <img class="mw-100" src="/assets/img/bwijuaratrip.png" alt="BanyuwangiJuaraTrip">
+                            </a>
                         </div>
                         <div class="card-body">
                             <div class="text-center">
@@ -170,7 +178,9 @@
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card shadow h-100">
                         <div class="card-img-top">
-                            <img class="mw-100" src="/assets/img/sdunej.png" alt="SDUNEJ">
+                            <a class="font-weight-bold h5" target="_blank" href="https://sdunej.id">
+                                <img class="mw-100" src="/assets/img/sdunej.png" alt="SDUNEJ">
+                            </a>
                         </div>
                         <div class="card-body">
                             <div class="text-center">
@@ -183,7 +193,9 @@
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card shadow h-100">
                         <div class="card-img-top">
-                            <img class="mw-100" src="/assets/img/etalase.png" alt="UKMK ETALASE">
+                            <a class="font-weight-bold h5" target="_blank" href="https://etalase.pesan-web.com">
+                                <img class="mw-100" src="/assets/img/etalase.png" alt="UKMK ETALASE">
+                            </a>
                         </div>
                         <div class="card-body">
                             <div class="text-center">
@@ -196,7 +208,9 @@
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card shadow h-100">
                         <div class="card-img-top">
-                            <img class="mw-100" src="/assets/img/absensi.png" alt="ABSENSI">
+                            <a class="font-weight-bold h5" target="_blank" href="https://absensi.pesan-web.com">
+                                <img class="mw-100" src="/assets/img/absensi.png" alt="ABSENSI">
+                            </a>
                         </div>
                         <div class="card-body">
                             <div class="text-center">
@@ -209,7 +223,9 @@
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card shadow h-100">
                         <div class="card-img-top">
-                            <img class="mw-100" src="/assets/img/bosgerobak.png" alt="bosgerobak">
+                            <a class="font-weight-bold h5" target="_blank" href="https://bosgerobak.com">
+                                <img class="mw-100" src="/assets/img/bosgerobak.png" alt="bosgerobak">
+                            </a>
                         </div>
                         <div class="card-body">
                             <div class="text-center">
@@ -222,7 +238,9 @@
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card shadow h-100">
                         <div class="card-img-top">
-                            <img class="mw-100" src="/assets/img/spot.png" alt="spot">
+                            <a class="font-weight-bold h5" target="_blank" href="https://spot.pesan-web.com">
+                                <img class="mw-100" src="/assets/img/spot.png" alt="spot">
+                            </a>
                         </div>
                         <div class="card-body">
                             <div class="text-center">
@@ -235,7 +253,9 @@
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card shadow h-100">
                         <div class="card-img-top">
-                            <img class="mw-100" src="/assets/img/primapers.png" alt="primapers">
+                            <a class="font-weight-bold h5" target="_blank" href="https://primapers.com">
+                                <img class="mw-100" src="/assets/img/primapers.png" alt="primapers">
+                            </a>
                         </div>
                         <div class="card-body">
                             <div class="text-center">
