--- a/index.html
+++ b/index.html
@@ -193,13 +193,13 @@
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card shadow h-100">
                         <div class="card-img-top">
-                            <a class="font-weight-bold h5" target="_blank" href="https://etalase.pesan-web.com">
+                            <a class="font-weight-bold h5" target="_blank" href="http://etalase.ilkom.unej.ac.id">
                                 <img class="mw-100" src="/assets/img/etalase.png" alt="UKMK ETALASE">
                             </a>
                         </div>
                         <div class="card-body">
                             <div class="text-center">
-                                <a class="font-weight-bold h5" target="_blank" href="https://etalase.pesan-web.com">UKMK ETALASE</a>
+                                <a class="font-weight-bold h5" target="_blank" href="http://etalase.ilkom.unej.ac.id">UKMK ETALASE</a>
                             </div>
                             <p style="font-size: small; text-align: justify;" class="mb-0 mt-3">Website profile UKMK ETALASE</p>
                         </div>
@@ -223,13 +223,13 @@
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card shadow h-100">
                         <div class="card-img-top">
-                            <a class="font-weight-bold h5" target="_blank" href="https://bosgerobak.com">
+                            <a class="font-weight-bold h5">
                                 <img class="mw-100" src="/assets/img/bosgerobak.png" alt="bosgerobak">
                             </a>
                         </div>
                         <div class="card-body">
                             <div class="text-center">
-                                <a class="font-weight-bold h5" target="_blank" href="https://bosgerobak.com">BOSGEROBAK</a>
+                                <a class="font-weight-bold h5">BOSGEROBAK</a>
                             </div>
                             <p style="font-size: small; text-align: justify;" class="mb-0 mt-3">Website e-commerce atau toko online yang menggunakan API WhatsApp untuk pemesanan produk</p>
                         </div>
