--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card shadow h-100">
                         <div class="card-img-top">
-                            <a class="font-weight-bold h5" target="_blank" href="https://arjasa.web.id">
+                            <a class="font-weight-bold h5" target="_blank" href="https://arjasa.desa.id">
                                 <img class="mw-100" src="/assets/img/arjasa.png" alt="Desa Arjasa">
                             </a>
                         </div>
                         <div class="card-body">
                             <div class="text-center">
-                                <a class="font-weight-bold h5" target="_blank" href="https://arjasa.web.id">Desa Arjasa</a>
+                                <a class="font-weight-bold h5" target="_blank" href="https://arjasa.desa.id">Desa Arjasa</a>
                             </div>
                             <p style="font-size: small; text-align: justify;" class="mb-0 mt-3">Website sistem informasi manajemen pelayanan desa di Arjasa Kecamatan Arjasa Kabupaten Jember</p>
                         </div>
