--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <div class="col-lg-4 col-md-6 mb-5">
                     <div class="card shadow h-100">
                         <div class="card-img-top">
-                            <a class="font-weight-bold h5" target="_blank" href="https://sdunej.id">
+                            <a class="font-weight-bold h5" target="_blank" href="https://sd.unej.ac.id">
                                 <img class="mw-100" src="/assets/img/sdunej.png" alt="SDUNEJ">
                             </a>
                         </div>
